syntax = "proto3";

package sf.substreams.aelf.token.v1;

import 'sf/substreams/v1/clock.proto';

message BalanceUpdates {
  .sf.substreams.v1.Clock clock = 1;
  repeated BalanceUpdate balance_updates = 2;
}

message BalanceUpdate {
  string contract = 1;
  string transaction = 2;
  string call_path = 3;
  string symbol = 4;
  string owner = 5;
  string new_balance = 6;
}

message Transfers {
  .sf.substreams.v1.Clock clock = 1;
  repeated Transfer transfers = 2;
}

message Transfer {
  string contract = 1;
  string tx_id = 2;
  string call_path = 3;
  string symbol = 4;
  string from = 5;
  string to = 6;
  string amount = 7;
  string memo = 8;
}

message Burns {
  .sf.substreams.v1.Clock clock = 1;
  repeated Burn burns = 2;
}

message Burn {
  string contract = 1;
  string tx_id = 2;
  string call_path = 3;
  string burner = 4;
  string symbol = 5;
  string amount = 6;
}

message TokenCreations {
  .sf.substreams.v1.Clock clock = 1;
  repeated TokenCreation token_creations = 2;
}

message TokenCreation {
  string contract = 1;
  string tx_id = 2;
  string call_path = 3;
  string owner = 4;
  string symbol = 5;
  string token_name = 6;
  string total_supply = 7;
  string decimals = 8;
  string issuer = 9;
  bool is_burnable = 10;
  int32 issue_chain_id = 11;
  map<string, string> external_info = 12;
}